[tool.poetry]
name = "josh-bot"
version = "0.1.0"
description = ""
authors = ["Josh Ajiniran <josuajiniran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyAutoGUI = "^0.9.53"
keyboard = "^0.13.5"
psutil = "^5.9.1"
PyGetWindow = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
